// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/Width handles % value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--_uic-w": "50%",
  },
}
`;

exports[`Styles/Width handles px value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--_uic-w": "50px",
  },
}
`;

exports[`Styles/Width handles responsive value 1`] = `
{
  "classNames": [
    "literal",
    "literal--l",
  ],
  "variables": {
    "--_uic-w": "50px",
    "--_uic-w-l": "50%",
  },
}
`;

exports[`Styles/Width handles undefined value 1`] = `null`;

exports[`Styles/Width handles unit value 1`] = `
{
  "classNames": [
    "unit",
  ],
  "variables": {
    "--_uic-w": 5,
  },
}
`;
